== 0.8.0 -- 2011 February 21

* Rubygems 1.5.0 removes <tt>Gem::Validator#unit_test</tt>. Switch to using <tt>testrb</tt> for <tt>Shoe::Tasks::Test</tt>.
* Shoe is now testable with rubygems-test.

== 0.7.1 -- 2010 October 12

* Include top-level rdoc files in the shoe gem.

== 0.7.0 -- 2010 October 11

* 1.9 compatibility!
* Remove shoe generator; use `bundle gem foo` instead.
* Remove release tasks; suggest Bundler's instead.
* Use Shoe.install_tasks to auto-detect gemspec.
* Remove dependency on launchy.

== 0.6.2 -- 2010 April 29

* Generated C extension actually works now.
* `rake test` now properly depends on `rake compile`.
* Run Gem::Validator tests via Test::Unit::AutoRunner, so that redgreen has a chance to color the dots as well as the result line.
* Generated gemspec now selects files with Dir.glob instead of `git ls-files`.
* Always generate a section 3 manpage.
* `rake clean` now preserves <tt>.bundle/</tt> and <tt>.rvmrc</tt>.
* Include C extensions in RDoc.

== 0.6.1 -- 2010 April 22

* Reformat warning messages.
* Sample-require redgreen in the generated test/helper.
* Include common dvelopment dependencies in the generated gemspec.
* Fix a couple of typos.
* Document extensions to OptionParser.

== 0.6.0 -- 2010 April 20

* Add --webcvs to rdoc_options in generated gemspec.
* Move erb templates from lib to datadir.
* Generate a top-level project module.
* Move generated VERSION constant out of foo/version.rb, into foo.rb
* The shoe generator accepts an --application option to generate an executable stub.
* The shoe generator accepts a --data option to generate a data directory.
* The shoe generator accepts an --extension option to generate a C extension.
* The shoe generator accepts a --test-unit option to generate Test::Unit tests.
* Shoe::Tasks may no longer be built with a Gem::Specification object; pass the path to a gemspec file instead.
* Generate a .gitignore file.
* New `rake ronn` task to build man pages from ronn sources.