@@ -1,9 +1,9 @@
 module CommandRunner
   attr_reader :output
 
-  def system(command)
+  def system(command, expected_success = true)
     IO.popen("#{command} 2>&1") { |io| @output = io.read.chomp }
-    assert $?.success?, @output
+    assert_equal expected_success, $?.success?, @output
     @output
   end
 end
