@@ -1,3 +1,7 @@
+== Edge
+
+* Shoe::Tasks::Test now halts further execution when tests fail.
+
 == 0.8.0 -- 2011 February 21
 
 * Rubygems 1.5.0 removes <tt>Gem::Validator#unit_test</tt>. Switch to using <tt>testrb</tt> for <tt>Shoe::Tasks::Test</tt>.
